Adding product module
